learned about the Maven Surefire plugin